--- a/styles/pj4.css
+++ b/styles/pj4.css
@@ -165,6 +165,14 @@ header
     -webkit-box-shadow: inset 0 -5px 0 0 rgba(0,0,0,.04);
             box-shadow: inset 0 -5px 0 0 rgba(0,0,0,.04);
 }
+.slide1 .btn:hover
+{
+    color: #fff;
+    border-radius: 5px;
+    background-color: #327199;
+    -webkit-box-shadow: inset 0 -5px 0 0 rgba(0,0,0,.04);
+            box-shadow: inset 0 -5px 0 0 rgba(0,0,0,.04);
+}
 .services
 {
     border-bottom: 2px solid #dcdcdc;
